--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Defencer</title>
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
